--- a/API/CBHBusiness/CBHBusiness.csproj
+++ b/API/CBHBusiness/CBHBusiness.csproj
@@ -48,6 +48,7 @@
       <DependentUpon>CBHClasses.dbml</DependentUpon>
     </Compile>
     <Compile Include="ClientModels\qfrmInvoiceMaintenance.cs" />
+    <Compile Include="qfrmJobOverviewBusiness.cs" />
     <Compile Include="InvoiceBusiness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
