Quote Confirmation ContactEmail

--- a/API/CBHBusiness/CBHBusiness.csproj
+++ b/API/CBHBusiness/CBHBusiness.csproj
@@ -60,7 +60,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="Jobs\qfrmFileQuoteConfirmationBusiness.cs" />
+    <Compile Include="Sales\qfrmFileQuoteConfirmationBusiness.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
