--- a/API/CBHWA/Properties/Settings.settings
+++ b/API/CBHWA/Properties/Settings.settings
@@ -32,5 +32,8 @@
     <Setting Name="LOG_ENABLED" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="LogErrorTpl" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">ERROR:\n\tMETHOD = {0}.{1}\n\tMESSAGE = {2}</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
